syntax = "proto3";

package merchant;

option go_package = "internal/delivery/grpc/pb;pb";
import "google/protobuf/timestamp.proto";

message Merchant{
    string id = 1;
    string user_id = 2;
    string name_merchant = 3;
    string lat = 4;
    string long = 5;
    string open_hour = 6;
    string close_hour = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message MerchantListResponse {
    repeated Merchant merchants = 1;
}

message CreateMerchantReqeuest {
    string user_id = 1;
    string name_merchant = 2;
    string lat = 3;
    string long = 4;
    string open_hour = 5;
    string close_hour = 6;
}

message UpdateMerchantReqeuest {
    string id = 1;
    string user_id = 2;
    string name_merchant = 3;
    string lat = 4;
    string long = 5;
    string open_hour = 6;
    string close_hour = 7;
}

message DeleteMerchantRequest {
    string id = 1;
}

message DeleteMerchantResponse {
    string message = 1;
}

message MerchantResponse {
    Merchant Merchant = 1;
}

message GetByIdMerchantReqeuest {
    string id = 1;
}

message Empty {}

service MerchantService {
    rpc CreateMerchant(CreateMerchantReqeuest) returns (MerchantResponse);
    rpc GetAllMerchant(Empty) returns (MerchantResponse);
    rpc GetByIdMerchant(GetByIdMerchantReqeuest) returns (MerchantResponse);
    rpc UpdateMerchant(UpdateMerchantReqeuest) returns (MerchantResponse);
    rpc DeleteMerchant(DeleteMerchantRequest) returns (DeleteMerchantResponse);
}